@@ -1,17 +1,24 @@
 package com.gaas.threeKingdoms.e2e.scrollcard;
 
+
 import com.gaas.threeKingdoms.Game;
+import com.gaas.threeKingdoms.e2e.JsonFileWriterUtil;
 import com.gaas.threeKingdoms.e2e.testcontainer.test.AbstractBaseIntegrationTest;
 import com.gaas.threeKingdoms.generalcard.General;
+import com.gaas.threeKingdoms.handcard.Deck;
 import com.gaas.threeKingdoms.handcard.PlayType;
 import com.gaas.threeKingdoms.handcard.basiccard.Dodge;
 import com.gaas.threeKingdoms.handcard.basiccard.Kill;
 import com.gaas.threeKingdoms.handcard.basiccard.Peach;
+import com.gaas.threeKingdoms.handcard.equipmentcard.mountscard.RedRabbitHorse;
+import com.gaas.threeKingdoms.handcard.equipmentcard.weaponcard.QilinBowCard;
+import com.gaas.threeKingdoms.handcard.scrollcard.Dismantle;
 import com.gaas.threeKingdoms.handcard.scrollcard.Duel;
 import com.gaas.threeKingdoms.player.HealthStatus;
 import com.gaas.threeKingdoms.player.Player;
 import com.gaas.threeKingdoms.rolecard.Role;
 import org.junit.jupiter.api.Test;
+import org.testcontainers.shaded.org.checkerframework.checker.units.qual.A;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -22,37 +29,31 @@ import java.util.List;
 import static com.gaas.threeKingdoms.e2e.MockUtil.createPlayer;
 import static com.gaas.threeKingdoms.e2e.MockUtil.initGame;
 import static com.gaas.threeKingdoms.handcard.PlayCard.*;
+import static com.gaas.threeKingdoms.handcard.PlayCard.BHK039;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-public class DuelTest extends AbstractBaseIntegrationTest {
-
-    public DuelTest() {
-        this.gameId = "my-id";
-    }
-
-    private String duelCardId = "SDA079";
+public class DismantleTest extends AbstractBaseIntegrationTest {
 
     @Test
-    public void givenPlayerABCD_PlayerAPlayDuel_WhenPlayerBHaveNoKill_ThenPlayerBHpMinusOne() throws Exception {
-//        Given
-//        玩家 A B C D
-//        A 的回合
-//        A 有決鬥 x 1 沒有殺
-//
-//        B 沒有殺，B 4 hp
-//
-        givenPlayerAHaveDuel();
+    public void givenPlayerABCD_PlayerAHasDismantle_WhenPlayerAPlaysDismantleAndTargetsBToThrowIndex0_ThenPlayerBHandCardDecreaseByOne() throws Exception {
+        // Given
+        // 玩家ABCD
+        // B有一麒麟弓，五張手牌，第一張是 KILL
+        // 第二張到五張是 Peach
+        // A有過河拆橋
+        // When
+        // A 出過河拆橋，指定 B
+        // A 指定 index 0
+        // Then
+        // B 的手牌沒有 KILL ，並剩下四張
+        givenPlayerAHaveDismantle();
 
-//        When
-//        A 出決鬥，指定 B
-        mockMvcUtil.playCard(gameId, "player-a", "player-b", duelCardId, PlayType.ACTIVE.getPlayType())
+        mockMvcUtil.playCard(gameId, "player-a", "player-b", "SS3003", PlayType.ACTIVE.getPlayType())
                 .andExpect(status().isOk()).andReturn();
 
-//        Then
-//        B 扣血，B 3 hp
         List<String> playerIds = List.of("player-a", "player-b", "player-c", "player-d");
-        String filePathTemplate = "src/test/resources/TestJsonFile/ScrollTest/Duel/player_a_player_duel_for_%s.json";
+        String filePathTemplate = "src/test/resources/TestJsonFile/ScrollTest/DismantleBehavior/player_a_play_dismantle_for_%s.json";
         for (String testPlayerId : playerIds) {
             String testPlayerJson = "";
             //testPlayerJson = JsonFileWriterUtil.writeJsonToFile(websocketUtil, testPlayerId, filePathTemplate);
@@ -63,85 +64,130 @@ public class DuelTest extends AbstractBaseIntegrationTest {
             assertEquals(expectedJson, testPlayerJson);
         }
 
+        mockMvcUtil.useDismantleEffect(gameId, "player-a", "player-b", null, 0);
+
+        filePathTemplate = "src/test/resources/TestJsonFile/ScrollTest/DismantleBehavior/player_a_use_dismantle_effect_choose_cardIndex_for_%s.json";
+        for (String testPlayerId : playerIds) {
+            String testPlayerJson = "";
+            //testPlayerJson = JsonFileWriterUtil.writeJsonToFile(websocketUtil, testPlayerId, filePathTemplate);
+            testPlayerJson = websocketUtil.getValue(testPlayerId);
+            testPlayerId = testPlayerId.replace("-", "_");
+            Path path = Paths.get(String.format(filePathTemplate, testPlayerId));
+            String expectedJson = Files.readString(path);
+            assertEquals(expectedJson, testPlayerJson);
+        }
+    }
+
+    @Test
+    public void givenPlayerABCD_PlayerBHasEquippedKylinBowAndChituNoHandCards_PlayerAHasDismantle_WhenPlayerAPlaysDismantleAndChoosesKylinBow_ThenPlayerBHasOnlyChituEquipped() throws Exception {
+//        Given
+//        玩家ABCD
+//        B有一張手牌
+//        A有過河拆橋
+//        When
+//        A 出過河拆橋，指定 B
+//        Then
+//        回傳 PlayCardEvent
+        givenPlayerAHaveDismantlePlayerBHaveQilinBowAndRedRabbitHorse();
+
+        mockMvcUtil.playCard(gameId, "player-a", "player-b", "SS3003", PlayType.ACTIVE.getPlayType())
+                .andExpect(status().isOk()).andReturn();
+        popAllPlayerMessage();
+
+        mockMvcUtil.useDismantleEffect(gameId, "player-a", "player-b", "EH5031", null);
+
+        List<String> playerIds = List.of("player-a", "player-b", "player-c", "player-d");
+        String filePathTemplate = "src/test/resources/TestJsonFile/ScrollTest/DismantleBehavior/player_a_use_dismantle_effect_choose_card_for_%s.json";
+        for (String testPlayerId : playerIds) {
+            String testPlayerJson = "";
+            //testPlayerJson = JsonFileWriterUtil.writeJsonToFile(websocketUtil, testPlayerId, filePathTemplate);
+            testPlayerJson = websocketUtil.getValue(testPlayerId);
+            testPlayerId = testPlayerId.replace("-", "_");
+            Path path = Paths.get(String.format(filePathTemplate, testPlayerId));
+                String expectedJson = Files.readString(path);
+            assertEquals(expectedJson, testPlayerJson);
+        }
+
         mockMvcUtil.finishAction(gameId, "player-a")
                 .andExpect(status().is2xxSuccessful()).andReturn();
     }
 
-    @Test
-    public void givenPlayerABCD_PlayerATurn_PlayerAHasDuelAndKillWith4HP_BPlayerHasTwoKillsAnd4HP_WhenPlayerAPlaysDuelAndAssignsB_AndPlayersAlternateKillsUntilBPlaysLastKill_ThenPlayerALoses1HPAndIsAt3HPWhilePlayerBRemainsAt4HP() throws Exception {
-        //            Given
-        //            玩家ABCD
-        //            A的回合
-        //            A有決鬥 x 1,殺 x 1, A 4hp
-        //
-        //            B 殺 x 2，B 4hp
-        givenPlayerAHaveDuelVer2();
+    private void givenPlayerAHaveDismantlePlayerBHaveQilinBowAndRedRabbitHorse() {
+        Player playerA = createPlayer(
+                "player-a",
+                4,
+                General.劉備,
+                HealthStatus.ALIVE,
+                Role.MONARCH,
+                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dismantle(SS3003)
+        );
+        Player playerB = createPlayer("player-b",
+                4,
+                General.劉備,
+                HealthStatus.ALIVE,
+                Role.MINISTER,
+                new Kill(BS8008), new Peach(BH3029), new Peach(BH2028), new Peach(BH2028), new Peach(BH2028)
+        );
+        playerB.getEquipment().setMinusOne(new RedRabbitHorse(EH5044));
+        playerB.getEquipment().setWeapon(new QilinBowCard(EH5031));
+        Player playerC = createPlayer(
+                "player-c",
+                4,
+                General.劉備,
+                HealthStatus.ALIVE,
+                Role.REBEL,
+                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dodge(BHK039)
+        );
+        Player playerD = createPlayer(
+                "player-d",
+                4,
+                General.劉備,
+                HealthStatus.ALIVE,
+                Role.TRAITOR,
+                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dodge(BHK039)
+        );
 
-        //            When
-        //            A 出決鬥，指定 B
-        //            B 出殺
-        //            A 出殺
-        //            B 出殺
-        mockMvcUtil.playCard(gameId, "player-a", "player-b", duelCardId, PlayType.ACTIVE.getPlayType())
-                .andExpect(status().isOk()).andReturn();
-        popAllPlayerMessage();
-        mockMvcUtil.playCard(gameId, "player-b", "player-a", "BS8008", PlayType.ACTIVE.getPlayType())
-                .andExpect(status().isOk()).andReturn();
-        popAllPlayerMessage();
-        mockMvcUtil.playCard(gameId, "player-a", "player-b", "BS8008", PlayType.ACTIVE.getPlayType())
-                .andExpect(status().isOk()).andReturn();
-        popAllPlayerMessage();
-        mockMvcUtil.playCard(gameId, "player-b", "player-a", "BS8008", PlayType.ACTIVE.getPlayType())
-                .andExpect(status().isOk()).andReturn();
-
-        //            Then
-        //            A 扣血, A 3hp
-        //            B 沒扣血, B 4hp
-        List<String> playerIds = List.of("player-a", "player-b", "player-c", "player-d");
-        String filePathTemplate = "src/test/resources/TestJsonFile/ScrollTest/Duel/player_a_player_duel_and_player_b_play_kill_for_%s.json";
-        for (String testPlayerId : playerIds) {
-            String testPlayerJson = "";
-//            testPlayerJson = JsonFileWriterUtil.writeJsonToFile(websocketUtil, testPlayerId, filePathTemplate);
-            testPlayerJson = websocketUtil.getValue(testPlayerId);
-            testPlayerId = testPlayerId.replace("-", "_");
-            Path path = Paths.get(String.format(filePathTemplate, testPlayerId));
-            String expectedJson = Files.readString(path);
-            assertEquals(expectedJson, testPlayerJson);
-        }
+        List<Player> players = Arrays.asList(playerA, playerB, playerC, playerD);
+        Game game = initGame(gameId, players, playerA);
+        repository.save(game);
     }
 
-    @Test
-    public void givenPlayerABCD_PlayerATurn_PlayerAHasDuelAndNoKillWith4HP_BPlayerHasKillAnd4HP_WhenPlayerAPlaysDuelAndAssignsB_AndPlayerBDoesNotPlayKill_ThenPlayerADoesNotLoseHPAndRemainsAt4HPWhilePlayerBLoses1HPAndIsAt3HP() throws Exception {
-        //             Given
-        //            玩家 A B C D
-        //            A的回合
-        //            A有決鬥 x 1,殺 x 1, A 4hp
-        //            B 殺 x 2，B 4hp
-        givenPlayerAHaveDuelVer2();
+    private void givenPlayerAHaveDismantle() {
+        Player playerA = createPlayer(
+                "player-a",
+                4,
+                General.劉備,
+                HealthStatus.ALIVE,
+                Role.MONARCH,
+                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dismantle(SS3003)
+        );
+        Player playerB = createPlayer("player-b",
+                4,
+                General.劉備,
+                HealthStatus.ALIVE,
+                Role.MINISTER,
+                new Kill(BS8008), new Peach(BH3029), new Peach(BH2028), new Peach(BH2028), new Peach(BH2028)
+        );
+        Player playerC = createPlayer(
+                "player-c",
+                4,
+                General.劉備,
+                HealthStatus.ALIVE,
+                Role.REBEL,
+                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dodge(BHK039)
+        );
+        Player playerD = createPlayer(
+                "player-d",
+                4,
+                General.劉備,
+                HealthStatus.ALIVE,
+                Role.TRAITOR,
+                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dodge(BHK039)
+        );
 
-        //            When
-        //            A 出決鬥，指定 B
-        //            B 不出殺
-        mockMvcUtil.playCard(gameId, "player-a", "player-b", duelCardId, PlayType.ACTIVE.getPlayType())
-                .andExpect(status().isOk()).andReturn();
-        popAllPlayerMessage();
-        mockMvcUtil.playCard(gameId, "player-b", "player-a", "", PlayType.SKIP.getPlayType())
-                .andExpect(status().isOk()).andReturn();
-
-        //            Then
-        //            A 不扣血, A 4hp
-        //            B 扣血, B 3hp
-        List<String> playerIds = List.of("player-a", "player-b", "player-c", "player-d");
-        String filePathTemplate = "src/test/resources/TestJsonFile/ScrollTest/Duel/player_a_player_duel_and_player_b_skip_for_%s.json";
-        for (String testPlayerId : playerIds) {
-            String testPlayerJson = "";
-//            testPlayerJson = JsonFileWriterUtil.writeJsonToFile(websocketUtil, testPlayerId, filePathTemplate);
-            testPlayerJson = websocketUtil.getValue(testPlayerId);
-            testPlayerId = testPlayerId.replace("-", "_");
-            Path path = Paths.get(String.format(filePathTemplate, testPlayerId));
-            String expectedJson = Files.readString(path);
-            assertEquals(expectedJson, testPlayerJson);
-        }
+        List<Player> players = Arrays.asList(playerA, playerB, playerC, playerD);
+        Game game = initGame(gameId, players, playerA);
+        repository.save(game);
     }
 
     private void popAllPlayerMessage() {
@@ -150,83 +196,4 @@ public class DuelTest extends AbstractBaseIntegrationTest {
         websocketUtil.getValue("player-c");
         websocketUtil.getValue("player-d");
     }
-
-    private void givenPlayerAHaveDuelVer2() {
-        Player playerA = createPlayer(
-                "player-a",
-                4,
-                General.劉備,
-                HealthStatus.ALIVE,
-                Role.MONARCH,
-                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Duel(SDA079)
-        );
-        Player playerB = createPlayer("player-b",
-                4,
-                General.劉備,
-                HealthStatus.ALIVE,
-                Role.MINISTER,
-                new Kill(BS8008), new Kill(BS8008), new Peach(BH4030), new Dodge(BH2028)
-        );
-        Player playerC = createPlayer(
-                "player-c",
-                4,
-                General.劉備,
-                HealthStatus.ALIVE,
-                Role.REBEL,
-                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dodge(BHK039)
-        );
-        Player playerD = createPlayer(
-                "player-d",
-                4,
-                General.劉備,
-                HealthStatus.ALIVE,
-                Role.TRAITOR,
-                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dodge(BHK039)
-        );
-
-        List<Player> players = Arrays.asList(playerA, playerB, playerC, playerD);
-        Game game = initGame(gameId, players, playerA);
-        repository.save(game);
-    }
-
-
-    private void givenPlayerAHaveDuel() {
-        Player playerA = createPlayer(
-                "player-a",
-                4,
-                General.劉備,
-                HealthStatus.ALIVE,
-                Role.MONARCH,
-                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Duel(SDA079)
-        );
-        Player playerB = createPlayer("player-b",
-                4,
-                General.劉備,
-                HealthStatus.ALIVE,
-                Role.MINISTER,
-                new Peach(BH4030), new Dodge(BH2028)
-        );
-        Player playerC = createPlayer(
-                "player-c",
-                4,
-                General.劉備,
-                HealthStatus.ALIVE,
-                Role.REBEL,
-                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dodge(BHK039)
-        );
-        Player playerD = createPlayer(
-                "player-d",
-                4,
-                General.劉備,
-                HealthStatus.ALIVE,
-                Role.TRAITOR,
-                new Kill(BS8008), new Peach(BH3029), new Dodge(BH2028), new Dodge(BHK039)
-        );
-
-        List<Player> players = Arrays.asList(playerA, playerB, playerC, playerD);
-        Game game = initGame(gameId, players, playerA);
-        repository.save(game);
-    }
-
-
 }
